<resources>
    <string name="app_name">Booking Hotel</string>
    <string name="warning">Ứng dụng chỉ là một sản phẩm demo, không có mục địch mạo danh doanh nghiệp</string>
    <string name="input_username">Nhập vào tài khoản</string>
    <string name="input_name">Nhập vào tên của bạn</string>
    <string name="input_phone">Nhập vào số điện thoại</string>
    <string name="input_password">Nhập vào mật khẩu</string>
    <string name="forgot_password"><u>Bạn quên mật khẩu</u></string>
    <string name="signIn">Đăng nhập</string>
    <string name="loginSentence">Bạn chưa có tài khoản?</string>
    <string name="register">Đăng kí</string>
    <string name="textCreateAccount">Tạo tài khoản của bạn</string>
    <string name="textOr">Nếu chưa có, mời bạn đăng kí</string>
    <string name="back">back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textBooking">Hãy chọn phòng cho chuyến đi sắp tới!</string>
    <string name="textHotel">Hơn 100 tour du lịch đang chờ bạn</string>
    <string name="text">Nhập địa điểm </string>
    <string name="button_search">Tìm kiếm</string>
    <string name="textNoBooking">Không có phòng nào</string>
    <string name="titleSaved">Phòng bạn đã yêu thích</string>
    <string name="textSaved">Khám phá lại những nơi bạn đã yêu thích</string>
    <string name="textReservation">Chuyến đi</string>
    <string name="isActive">Đang hoạt động</string>
    <string name="textPast">Đã qua</string>
    <string name="textCanceled">Đã hủy</string>
    <string name="logout">Đăng xuất</string>

    // forgot passowrd
    <string name="buttonForgotPassword">Xác nhận</string>
    <string name="otpFall">Bạn nhập OTP sai</string>
    <string name="restorePassword">Khôi phục mật khẩu</string>
    <string name="textRestorePassword">Vui lòng, bạn làm theo các bước chúng tôi yêu cầu</string>
    <string name="inputNewPassword">Nhập vào mật khẩu mới</string>
    <string name="errorInputOTP">Vui lòng nhập đầy đủ mã OTP</string>
    <string name="resendOTP"><u>Gửi lại mã OTP</u></string>


    // text sign In
    <string name="checkEmail">Vui lòng nhập vào gmail</string>
    <string name="formatEmail">Gmail không đúng định dạng</string>
    <string name="checkPassword">Vui lòng nhập vào mật khẩu</string>
    <string name="success_admin">Đăng nhập quản lí thành công</string>

    <string name="success">Đăng nhập thành công</string>
    <string name="register_success">Đăng kí thành công</string>
    <string name="error">Email or password is incorrect</string>

    // register
    <string name="inputName">Vui lòng nhập vào họ tên</string>
    <string name="inputPhone">Vui lòng nhập vào số điện thoại</string>
    <string name="formatPhone">Vui lòng nhập vào số điện thoại đúng định dạng</string>
    <string name="titleInfoRoom">Thông tin phòng</string>
    // comment

    <string name="titleComment">Đánh giá</string>
    <string name="btnReview">Gửi đánh giá</string>
    <string name="textReview">Vui lòng nhập nội dung đánh giá</string>
    <string name="inputReview">Vui lòng chọn ít nhất 1 sao</string>

    // text plane
    <string name="titlePlane">Mở cánh cửa khám phá cùng Sofitel Hà Nội</string>
    <string name="textPlane">Sofitel Hà Nội - Đặt chân lên đỉnh mây với một bước nhảy</string>
    <string name="oneWay">Một chiều</string>
    <string name="roundTrip">Khứ hồi</string>
    <string name="textStartPoint">Điểm đi</string>
    <string name="textEndPoint">Điểm đến</string>
    <string name="textDatePlane">Ngày đi</string>
    <string name="textHour">Giờ đi</string>

    <string name="textButtonPlane">Tìm chuyến bay</string>
    <string name="Plane">Chuyến bay</string>
    <string name="Car">Thuê xe</string>

    <string name="textButtonCar">Tìm chuyến</string>
    <string name="motoBike">Xe máy</string>
    <string name="textCar">Xe ô tô</string>

    // text introduce
    <string name="titleIntroduce1">Sofitel Legend Metropole Hà Nội – Biểu tượng \n của sự sang trọng và lịch sử</string>
    <string name="phoneSofitel">0292999999</string>
    <string name="emailSofitel">sofitel@hanoi.com</string>
    <string name="textIntroduce">Sofitel Hà Nội là sự kết hợp hoàn hảo giữa nét duyên dáng cổ điển Pháp và sự tinh tế hiện đại, tọa lạc ngay trung tâm thủ đô. Với hơn 120 năm lịch sử, khách sạn là điểm đến hàng đầu của các nguyên thủ, doanh nhân và du khách muốn tận hưởng sự sang trọng tuyệt đối. Từ những phòng nghỉ tinh tế đến nhà hàng đạt chuẩn quốc tế, spa thư giãn, và khu vườn yên tĩnh giữa phố cổ – Sofitel Hà Nội không chỉ là nơi lưu trú, mà còn là nơi lưu giữ những trải nghiệm khó quên.</string>
    <string name="itemIntroduce">Giới thiệu về chúng tôi</string>
    <string name="itemBook">Điều khoản và điều kiện</string>
    <string name="itemPolicy">Chính sách riêng tư</string>
    <string name="itemSupport">Hỗ trợ khách hàng</string>
    <string name="itemSettingAccount">Cài đặt tài khoản của bạn</string>

    <string name="textConfirmDelete">Bạn có muốn xóa đánh giá?</string>
    <string name="btnDeleteReview">Xóa đánh giá</string>
    <string name="btnCancel">Hủy</string>

    <string name="textDateCheckIn">Ngày nhận phòng</string>
    <string name="textDateCheckOut">Ngày trả phòng</string>
    <string name="textChildren">Trẻ em</string>
    <string name="textAgeChildren">Số tuổi</string>
    <string name="textRequest">Nhập yêu cầu của bạn</string>

    <string name="textQuantity">Số lượng</string>

    <string name="activeTrip">Trạng thái đặt phòng hiện tại</string>
    <string name="pastTrip">Trạng thái đặt phòng gần đây</string>
    <string name="cancelTrip">Phòng đã hủy gần đây</string>

</resources>