<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="363dp"
    android:layout_margin="1dp"
    android:background="@drawable/bg_view_body_plane"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.service.PlaneFragment">

    <LinearLayout
        android:padding="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/videoIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/bg_input_plane"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <RadioButton
                android:id="@+id/oneWay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/bg_radio_button"
                android:text="@string/oneWay"
                android:textSize="15sp"
                android:textColor="@color/darkBlue"
                android:padding="8dp"/>

            <RadioButton
                android:id="@+id/roundTrip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:button="@drawable/bg_radio_button"
                android:text="@string/roundTrip"
                android:textSize="15sp"
                android:textColor="@color/darkBlue"
                android:padding="8dp"/>

        </RadioGroup>

        <EditText
            android:drawableStart="@drawable/ic_plane_start"
            android:hint="@string/textStartPoint"
            style="@style/inputPlane"
            android:importantForAutofill="no" />

        <EditText
            android:drawableStart="@drawable/ic_plane_end"
            android:inputType="text"
            android:drawablePadding="10dp"
            android:textColor="@color/darkBlue"
            android:textSize="16sp"
            android:hint="@string/textEndPoint"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_input_plane"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            tools:ignore="Autofill,LabelFor,RtlSymmetry" />

        <EditText
            android:drawableStart="@drawable/ic_date_plane"
            android:inputType="text"
            android:drawablePadding="10dp"
            android:textColor="@color/darkBlue"
            android:textSize="16sp"
            android:hint="@string/textDatePlane"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_input_plane"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            tools:ignore="Autofill,LabelFor,RtlSymmetry" />

        <EditText
            android:drawableStart="@drawable/ic_hour"
            android:inputType="text"
            android:drawablePadding="10dp"
            android:textColor="@color/darkBlue"
            android:textSize="16sp"
            android:hint="@string/textHour"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_input_plane"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            tools:ignore="Autofill,LabelFor,RtlSymmetry" />


    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/textButtonPlane"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textColor="@color/darkBlue"
            android:textStyle="bold"
            android:background="@drawable/bg_view_button_plane"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>