<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SavedFragment">

    <LinearLayout
        android:id="@+id/linearSearch"
        android:background="@drawable/bg_fragment_booking"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        style="@style/linearLayoutBooking">

        <TextView
            style="@style/textViewTitle"
            android:layout_marginTop="48dp"
            android:text="@string/titleSaved" />

        <TextView
            style="@style/textViewContent"
            android:layout_marginTop="4dp"
            android:text="@string/textSaved" />

        <EditText
            android:id="@+id/inputShip"
            style="@style/editText"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:drawableStart="@drawable/ic_search"
            android:hint="@string/text"
            android:importantForAutofill="no"
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSearch"
            android:layout_margin="16dp"
            android:text="@string/button_search"
            android:background="@drawable/button_white"
            style="@style/buttonWhite"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toBottomOf="@id/linearSearch"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ProgressBar
            android:id="@+id/progressHotel"
            android:layout_width="wrap_content"
            android:indeterminateTint="@color/primary"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="?android:attr/progressBarStyle"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listHotel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            style="@style/textViewContentBold"
            android:id="@+id/noData"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:text="@string/textNoBooking"
            android:textColor="@color/red"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>