<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/primary"
    android:layout_height="match_parent"
    tools:context=".view.SignInActivity">

    <FrameLayout
        android:id="@+id/image_sign_in"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/imageSignIn"
        tools:ignore="MissingConstraints">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="350dp"/>

    <LinearLayout
        android:id="@+id/linearInput"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LinearLayout">

        <EditText
            android:id="@+id/inputEmail"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:hint="@string/input_username"
            android:drawableEnd="@drawable/ic_email"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="@style/editText"/>

        <EditText
            android:id="@+id/inputPassword"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:hint="@string/input_password"
            android:drawableEnd="@drawable/ic_eye"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="@style/editText"/>


        <TextView
            android:id="@+id/forgotPassword"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_password"
            style="@style/textForgot"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toBottomOf="@id/linearInput"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttonRegister"
            android:layout_margin="16dp"
            style="@style/ConstraintLayout">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSignIn"
                android:text="@string/signIn"
                android:background="@drawable/button_white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/buttonWhite"/>

            <ProgressBar
                android:id="@+id/progressbarSignIn"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:indeterminate="true"
                style=  "@style/progressbar"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRegister"
            android:text="@string/register"
            android:background="@drawable/bg_button_transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="16dp"
            style="@style/buttonWhite"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>