<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".view.auth.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="650dp">
        <FrameLayout
            android:id="@+id/image_sign_in"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/imageSignIn"
            tools:ignore="MissingConstraints"/>

        <FrameLayout
            android:id="@+id/frame"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="350dp">

            <ImageView
                android:id="@+id/iconBack"
                android:layout_marginStart="16dp"
                android:layout_marginTop="26dp"
                style="@style/imageBack"/>

        </FrameLayout>

        <LinearLayout
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frame"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/LinearLayoutRegister">

            <EditText
                android:id="@+id/inputName"
                android:importantForAutofill="no"
                android:inputType="text"
                android:hint="@string/input_name"
                android:drawableEnd="@drawable/ic_people"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                style="@style/editText"/>

            <EditText
                android:id="@+id/inputEmail"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:hint="@string/input_username"
                android:drawableEnd="@drawable/ic_email"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                style="@style/editText"/>

            <EditText
                android:id="@+id/inputPhone"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:hint="@string/input_phone"
                android:drawableEnd="@drawable/ic_telephone"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                style="@style/editText"/>

            <EditText
                android:id="@+id/inputPassword"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:hint="@string/input_password"
                android:drawableEnd="@drawable/ic_eye"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                style="@style/editText"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="80dp">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRegister"
                    android:text="@string/register"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@drawable/button_white"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    style="@style/buttonWhite"/>

                <ProgressBar
                    android:id="@+id/progressbarRegister"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:indeterminate="true"
                    style=  "@style/progressbar"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>